fix bug: menu drawer not showing social media links

--- a/assets/component-menu-drawer.css
+++ b/assets/component-menu-drawer.css
@@ -64,16 +64,6 @@ details[open].menu-opening > .menu-drawer__submenu {
   visibility: hidden; /* hide menus from screen readers when hidden by submenu */
 }
 
-@media screen and (min-width: 750px) {
-  .menu-drawer {
-    width: 40rem;
-  }
-
-  .no-js .menu-drawer {
-    height: auto;
-  }
-}
-
 .menu-drawer__inner-container {
   position: relative;
   height: 100%;
@@ -205,8 +195,8 @@ details[open].menu-opening > .menu-drawer__submenu {
 }
 
 .menu-drawer__utility-links {
-  padding: 2rem;
   background-color: rgb(var(--color-foreground));
+  padding: 0 2rem 7rem;
 }
 
 .menu-drawer__account {
@@ -241,4 +231,18 @@ details[open].menu-opening > .menu-drawer__submenu {
 
 .menu-drawer .list-social__link {
   padding: 1.3rem 1.25rem;
+}
+
+@media screen and (min-width: 768px) {
+  .menu-drawer {
+    width: 40rem;
+  }
+
+  .no-js .menu-drawer {
+    height: auto;
+  }
+
+  .menu-drawer__utility-links {
+    padding: 2rem;
+  }
 }
